2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, startup/bspstart.c: Moved most of the remaining CPU
	Table fields to the Configuration Table. This included
	pretasking_hook, predriver_hook, postdriver_hook, idle_task,
	do_zero_of_workspace, extra_mpci_receive_server_stack,
	stack_allocate_hook, and stack_free_hook. As a side-effect of this
	effort some multiprocessing code was made conditional and some style
	clean up occurred.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>

	* irq/no_pic.c: use new inline routine exported by
	shared/irq/irq_supp.h for scanning the handler list.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq_init.c: removed irrelevant comment.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart.c: removed declaration of 
	bsp_exceptions_in_RAM.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq.h, irq/no_pic.c: some more changes to let
	using shared/irq/irq.c work.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, irq/irq.h, irq/no_pic.c: install
	and use new <irq/irq_supp.h> header.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>
	* irq/irq.h, irq/irq_init.c: Removed the definition
	of ASM_IRQ_VECTOR_BASE; this symbol was only use to
	initialize the irqBase member of the rtems_irq_global_settings
	struct. However, irqBase is an rtems_irq_symbolic_name,
	so using BSP_LOWEST_OFFSET is more appropriate.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>
	* irq/irq.h, irq/irq.c (removed), irq/no_pic.c (added),
	irq/irq_init.c, Makefile.am: The PSIM BSP (currently)
	has no support for an interrupt controller or interrupts
	other than the decrementer. Removed all definitions for PCI + ISA
	interrupts and all unnecessary code (leftovers from copying).
	Separated PIC-specific bits into 'no_pic.c' which allows us
	to use 'irq.c' (i.e., more code) from 'shared'.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>
